fix: guard outbox and monitor bootstrap